<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="app_name">Bluetooth Input Emulator</string>
    <string name="pref_title">Settings</string>
    <string name="device_prompt">Select a paired device</string>
    
    <string name="msg_no_root">No root access.</string>
    <string name="msg_generic_failure">Generic failure: %s</string>
    <string name="msg_bluetooth_off">Please, enable Bluetooth to proceed</string>
    
    <string name="msg_button_nav">Nav</string>
    <string name="msg_button_touchpad">Pad</string>
    <string name="msg_button_media">Player</string>
    
    <string name="msg_menu_quit">Quit</string>
    <string name="msg_menu_refresh_devices">Refresh paired devices</string>
    <string name="msg_menu_settings">Settings</string>
        
    <string name="msg_dialog_no_bonded_devices_title">No paired devices found.</string>
    <string name="msg_dialog_no_bonded_devices_text">Please, pair your host to this device.\n</string>

    <string name="msg_dialog_invalid_ps3_bonding_title">Invalid pairing emulation.</string>
    <string name="msg_dialog_invalid_ps3_bonding_text">You selected \"%1$s\" emulation mode,\n However the host is a PS3 console.\n\nPlease, unpair this device and select \"Emulation mode\" as \"%2$s\" before pairing.</string>
    
    <string name="msg_dialog_enabling_bluetooth">Configuring Bluetooth device#8230;</string>
    
    <string name="msg_status_connected">Connected</string>
    <string name="msg_status_connecting">Connecting</string>
    <string name="msg_status_disconnected">Offline</string>
    
    <string name="msg_device_list_null">&lt;Disconnect&gt;</string>
    
    <string name="msg_pref_title_emulation_mode">Emulation mode</string>
    <string name="msg_pref_summary_emulation_mode">Mode: %s</string>
    <string name="msg_pref_title_bluetooth_discoverable">Bluetooth discoverable</string>
    <string name="msg_pref_summary_bluetooth_discoverable_click">Tap to enable discovery and emulation mode.</string>
    
    <string name="msg_pref_title_device_list">Paired devices:</string>
    
    <plurals name="msg_pref_summary_bluetooth_discoverable_timeout">
        <item quantity="one">Discoverable for one second...</item>
        <item quantity="other">Discoverable for %d seconds...</item>
    </plurals>
    
    <string name="msg_pref_summary_bluetooth_discoverable_no_timeout">Discoverable - no countdown available -</string>
    <string name="msg_pref_summary_device_emulation_mode">Emulation: %s</string>
    <string name="msg_pref_summary_device_emulation_mode_invalid">None - Not paired under emulation</string>
    
    <string name="msg_key_enter">Enter</string>
    <string name="msg_key_esc">Esc</string>

</resources>