<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_shape"
    android:gravity="right"
    android:orientation="vertical" >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/StatusTextView"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center"
            android:text="@string/msg_status_disconnected"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffff0000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Spinner
            android:id="@+id/DeviceSpinner"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_weight="0.35"
            android:drawSelectorOnTop="false"
            android:prompt="@string/device_prompt"  />

    </LinearLayout>
    
    <LinearLayout android:id="@+id/ControlsLayout"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        
	    <RadioGroup
	        android:id="@+id/NavRadioGroup"
	        android:layout_width="fill_parent"
	        android:layout_height="35dp"
	        android:gravity="center"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/TouchpadRadioButton"
	            android:layout_gravity="left|center"
	            android:layout_weight="1"
	            android:checked="true"
	            android:text="@string/msg_button_touchpad" />
	
	        <RadioButton
	            android:id="@+id/SpecialKeysRadioButton"
	            android:layout_gravity="right|center"
	            android:text="@string/msg_button_multimedia" />
	        
	    </RadioGroup>
	    
	    <andraus.bluetoothhidemu.view.EchoEditText
	        android:id="@+id/EchoEditText"
	        android:layout_width="fill_parent"
	        android:layout_height="35dp"
	        android:layout_gravity="center"
	        android:textStyle="normal"
	        android:maxLines="1"
	        android:scrollHorizontally="true"
	        android:textAppearance="?android:attr/textAppearanceSmall">
	    
	            <requestFocus />
	        </andraus.bluetoothhidemu.view.EchoEditText>
	        
	    <ViewFlipper android:id="@+id/MainViewFlipper"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent">
	        
	        <include android:id="@+id/TouchpadLayout"  layout="@layout/touchpad_controls" />
	        <include android:id="@+id/SpecialKeysLayout" layout="@layout/special_controls" />
	            
	    </ViewFlipper>
	    
    </LinearLayout>
    
</LinearLayout>